syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.huaweicloud.demo.lib.grpc.service";
option java_outer_classname = "TagTestProto";

package grpc;

service TagTransmissionTest {
    rpc testTag (EmptyRequest) returns (TrafficTag);
}

message EmptyRequest {
}

message TrafficTag {
    string tag = 1;
}